--- a/style.css
+++ b/style.css
@@ -22,14 +22,13 @@ h1 {
 
 h1 p {
   user-select: none;
-  transition: letter-spacing 0.4s, color 1s, text-shadow 0.4s;
+  transition: letter-spacing 0.4s, color 0.4s;
 }
 
 h1 p:hover {
   letter-spacing: 5px;
   color: white;
-  text-shadow: 0 0 16px #000000;
-  transition: letter-spacing 0.4s, color 1s, text-shadow 0.4s;
+  transition: letter-spacing 0.4s, color 0.4s;
 }
 
 footer {
@@ -39,8 +38,11 @@ footer {
 }
 
 .social {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1.0, 1.0);
   transform: scale(1);
-  padding: 10px;
+  padding: 30px;
   height: 10px;
   width: 10px;
   background-color: rgba(255, 255, 255, 0)f;
@@ -51,29 +53,40 @@ footer {
 }
 
 .social i {
+  color: black;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   width: 100%;
   transition: transform 0.3s, color 0.3s;
   display: flex;
   align-items:center;
   justify-content:center;
+  transform: scale(1.75);
   translate: 0 -2.5px;
+}
+
+.social a {
+  text-decoration: none;
 }
 
 .social i:hover {
   cursor: pointer;
-  transform: scale(1.25);
+  transform: scale(2.5);
+  -webkit-transform: translateZ(0) scale(2.5, 2.5);
   filter: contrast(1.3);
-  transition: transform 0.2s, color 0.2s, filter 0.2s;
+  transition: transform 0.2s, color 0.2s;
 }
 
 .social:has(i:hover) {
   background-color: white;
-  transform: scale(1.25);
+  transform: scale(1.2);
+  -webkit-transform: translateZ(0) scale(1.2, 1.2);
   transition: background-color 0.2s, transform 0.2s;
 }
 
 .social i:active {
-  transform: scale(0.8);
+  transform: scale(1.75);
+  -webkit-transform: translateZ(0) scale(1.75, 1.75);
 }
 
 .social[name="youtube"] i:hover {
