--- a/style.css
+++ b/style.css
@@ -1,239 +1,201 @@
 :root {
-  --dark: #0d0e12;
-  --60: #1D1F28;
-  --30: #ff8b61;
-  --10: #ff4242;
-}
-*:not(i,body,.main,header),*:not(i):hover {
-  transition: all 0.4s ease-in-out;
-  font-family: system-ui;
+  --dark: hsl(204, 100%, 5%);
+  --60: hsl(204, 50%, 15%);;
+  --30: hsl(204, 64%, 44%);
+  --10: hsl(204, 80%, 88%);
 }
 
-body {
-  position: absolute;
-  background: var(--60);
-  text-align: center;
-  min-height: 90vh;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-}
-
-header {
-  color: var(--30);
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 75px;
-}
-
-p {
-  width:fit-content;
-  font-family: Verdana, sans-serif;
-  font-weight: bold;
-}
-
-h1 {
-  font-size: 2vw;
-  width:fit-content;
-  align-self: center;
-  position:relative;
-  margin-top:13px;
-  user-select: none;
-  margin: auto;
-}
-
-h1:hover {
-  letter-spacing: 1vw;
-}
-
-footer {
-  user-select: none;
-  position: fixed;
-  bottom: 0;
-  background-color: var(--dark);
-  width: 100%;
-  align-self: center;
-}
-
-footer > * {
-  position:relative;
-}
-
-.socials {
-  background-color: var(--60);
-  border-radius: 1.5vw;
-  scale:0.5;
-  width: fit-content;
-  margin: auto;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
-  display: flex;
-  flex-direction: row;
-}
-.social {
-  background-color: var(--dark);
-  border-radius: 0.35vw;
-  margin: 4px 2px 4px 2px;
-  text-decoration: none;
-}
-.social:first-child {
-  margin-left: 4px;
-  border-radius: 1.3vw 0.35vw 0.35vw 1.3vw;
-}
-
-.social:last-child {
-  margin-right: 4px;
-  border-radius: 0.35vw 1.3vw 1.3vw 0.35vw;
-}
-
-.social-icon {
-  margin: 2.5vw;
-  color: var(--30);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  font-size: 1.25vw;
-  border-radius: 0.35vw;
-  transform: scale(2.5);
-  transition: all 0.3s ease-out;
-}
-
-.social:hover .social-icon {
-  cursor: pointer;
-  transform: scale(3.25);
-  transition: all 0.2s ease-out color 0.8s ease-out;
+* {
+  font-family: "Outfit";
   color: var(--10);
+  fill: var(--10);
+  stroke: var(--10);
 }
-
-.social:active .social-icon {
-  transform: scale(2.25);
-  -webkit-transform: translateZ(0) scale(2.25, 2.25);
-}
-
-.main {
-  position:absolute;
-  top:7vw;
-  left:5%;
-  width:90%;
-  height: fit-content;
-}
-
-.page section {
-  margin-top:30px;
-}
-
-.cards-container {
-  background-color: var(--dark);
-  border-radius: 3vw;
-  width: 60vw;
-  height: 25vw;
-  margin: auto;
-
-}
-.cards-header {
-  color: var(--60);
-  position: relative;
-  border-radius: 1vw;
-  background-color: var(--30);
-  width: fit-content;
-  padding-left: 1vw;
-  padding-right: 1vw;
-  padding-bottom: 0.3vw;
-  margin: auto;
-  top: 2vw;
-  font-size: 2vw;
-}
-.cards-container:hover .cards-header {
-  transform: translateY(-6vw);
-  background-color: var(--dark);
+*::selection {
+  background-color: white;
   color: var(--30);
 }
+*::-moz-selection {
+  background-color: white;
+  color: var(--30);
+}
+body {
+  background-color: var(--dark);
+  margin: 0;
+  & > header {
+    position: relative;
+    font-size: 1.5rem;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: -webkit-linear-gradient(to bottom, var(--dark), var(--30));
+    background: linear-gradient(to bottom, var(--dark), var(--30));
+    overflow: hidden;
+    
+    &:has(span#logo:hover) {
+      & > section.sub-header {
+        & > h2.title {
+          opacity: 0;
+          transform:translateY(-2rem);
+        }
+        & > h6.subtitle {
+          margin-bottom:3rem;
+          margin-top: -2rem;
+        }
+      }
+    }
+    & > span#logo {
+      width: 5rem;
+      height: 5rem;
+      border-radius: 100rem;
+      border: solid 1px white;
+      padding: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      position: relative;
+      margin-bottom: 3rem;
+      margin-top: 2rem;
+      animation: glow 2s ease-in-out infinite alternate-reverse;
+      & > svg#logo-svg {
+        position: absolute;
+        width: 7rem;
+        margin-top: -1.3rem;
+        transition: opacity .2s ease-out;
+      }
+      & > h2.title {
+        user-select: none;
+        position: absolute;
+        top: 4rem;
+        opacity: 0;
+        transition: top .2s ease-in-out, opacity .2s ease-in-out;
+      }
+      &:hover {
+        animation-play-state: paused;
+        & > svg#logo-svg {
+          opacity: 0;
+        }
+        & > h2.title {
+          opacity: 1;
+          top: 1.25rem;
+        }
+      }
+    }
+    & > section.sub-header {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      position: relative;
+      border-bottom: 1px white solid;
+      border-top: 1px white solid;
+      width: clamp(20ch, 50%, 40ch);
+      &::before {
+        position: absolute;
+        top: calc(-3rem - 1px);
+        content: "";
+        display:inline-block;
+        background-color: white;
+        width: 1px;
+        height: 3rem;
+      }
+      &::after {
+        position: absolute;
+        bottom: calc(-3rem - 1px);
+        content: "";
+        display:inline-block;
+        background-color: white;
+        width: 1px;
+        height: 3rem;
+      }
+      & > h2.title {
+        user-select: none;
+        margin-bottom:1rem;
+        margin-top:1rem;
+        transition: transform .2s ease-in-out, opacity .2s ease-in-out;
+      }
+      & > h6.subtitle {
+        font-weight: 300;
+        word-wrap: break-word;
+        text-align: center;
+        margin-bottom:1rem;
+        margin-top: 0;
+        transition: margin .2s ease-out;
+      }
+    }
+    & > section.header-buttons {
+      height: fit-content;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      padding: 0;
+      margin-top: 3rem;
+      gap: 1px;
+      & > a, > a:visited {
+        -webkit-box-shadow: 0px 0px 0px 1px white; 
+        box-shadow: 0px 0px 0px 1px white;
+        left: 0px;
+        right: 0px;
+        position: relative;
+        text-decoration: none;
+        padding: .6rem 1.25rem;
+        font-size: 1rem;
+        transition-property: transform, background-color;
+        transition-duration: .4s;
+        &:hover {
+          background-color: var(--60);
+          cursor: pointer;
+          transform: scaleY(1.3);
+          z-index: 2;
+          & > i {
+            transform: perspective(1px) translateZ(0) scaleY(0.76923076923);
+          }
+        }
+        &:active {
+          transform: scaleY(1.15);
+          & > i {
+            transform: perspective(1px) translateZ(0) scaleY(0.86956521739);
+          }
+        }
+        & > i {
+          -webkit-font-smoothing: antialiased;
+          transform: perspective(1px) translateZ(0);
+          color: white;
+          width: 1rem;
+          aspect-ratio: 1;
+          transition: transform .4s;
+        }
+      }
+    }
+    & > section#sky {
+      position: absolute;
+      width: 150%;
+      height: 175%;
+      & .constellation {
+        position: relative;
+        width: 400px;
+        height: 400px;
+      }
 
-.cards {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  bottom: 2vw;
+      & .star {
+        position: absolute;
+        aspect-ratio: 1;
+        background-color: white;
+        border-radius: 50%;
+      }
+    }
+  }
 }
 
-.card {
-  position: relative;
-  background: var(--30);
-  border-radius: 3vw;
-  width: 15vw;
-  height: 15vw;
-  -webkit-box-shadow: 0px 0px 25px 2px #000000;
-  -moz-box-shadow: 0px 0px 25px 2px #000000;
-  -o-box-shadow: 0px 0px 25px 2px #000000;
-  box-shadow: 0px 0px 25px 2px #000000;
-  filter: brightness(0.8);
 
-}
-
-.card:hover {
-  width: 15.5vw;
-  height: 15.5vw;
-  transition: width 0.2s height 0.2s;
-  
-}
-.card-gradient {
-  overflow: auto;
-  background: linear-gradient(180deg, var(--10) 0%, transparent 75%);
-  width: 100%;
-  height: 100%;
-  border-radius: 3vw;
-  opacity: 0;
-  overflow: hidden;
-}
-.card-gradient:hover {
-  opacity: 1 !important;
-}
-
-.cards-container:hover .card-gradient {
-  opacity: 0.8;
-}
-
-.card:nth-child(1) {
-  margin-top:6vw;
-}
-.card:nth-child(2) {
-  margin-top:6vw;
-  margin-left:-12vw;
-  z-index:1;
-}
-.card:nth-child(3) {
-  margin-left:-12vw;
-  margin-top:6vw;
-}
-.cards-container:hover .card:nth-child(2) {
-  margin-left:1vw;
-  margin-top:2vw;
-}
-.cards-container:hover .card:nth-child(3) {
-  margin-left:1vw;
-}
-.cards-container:hover .card {
-  filter: brightness(1);
-}
-.card:has(.card-gradient:active) {
-  background: var(--10);
-  transform: scale(1.1,0.9);
-  transition: all 0.2s ease-in-out;
-}
-.card i {
-  height: fit-content;
-  font-size: 2.5vw;
-  margin-top: 3vw;
-}
-
-.card h4 {
-  font-size: 1.4vw;
-  max-width: 87%;
-  margin: auto;
-  margin-top: 1vw;
+@keyframes glow {
+  from {
+    -webkit-box-shadow: 0px 0px 20px 5px #ffffff; 
+    box-shadow: 0px 0px 20px 5px #ffffff;
+  }
+  to {
+    -webkit-box-shadow: 0px 0px 20px 5px transparent; 
+    box-shadow: 0px 0px 20px 5px transparent;
+  }
 }
