--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Outfit&display=swap');
+
 :root {
   --dark: hsl(204, 100%, 5%);
   --60: hsl(204, 50%, 15%);;
