--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 * {
-  font-family: "Outfit";
+  font-family: "Outfit", serif;
   color: var(--10);
   fill: var(--10);
   stroke: var(--10);
@@ -135,10 +135,10 @@ body {
       margin-top: 3rem;
       gap: 1px;
       & > a, > a:visited {
-        -webkit-box-shadow: 0px 0px 0px 1px white; 
-        box-shadow: 0px 0px 0px 1px white;
-        left: 0px;
-        right: 0px;
+        -webkit-box-shadow: 0 0 0 1px white;
+        box-shadow: 0 0 0 1px white;
+        left: 0;
+        right: 0;
         position: relative;
         text-decoration: none;
         padding: .6rem 1.25rem;
@@ -193,11 +193,11 @@ body {
 
 @keyframes glow {
   from {
-    -webkit-box-shadow: 0px 0px 20px 5px #ffffff; 
-    box-shadow: 0px 0px 20px 5px #ffffff;
+    -webkit-box-shadow: 0 0 20px 5px #ffffff;
+    box-shadow: 0 0 20px 5px #ffffff;
   }
   to {
-    -webkit-box-shadow: 0px 0px 20px 5px transparent; 
-    box-shadow: 0px 0px 20px 5px transparent;
+    -webkit-box-shadow: 0 0 20px 5px transparent;
+    box-shadow: 0 0 20px 5px transparent;
   }
 }
